--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/preset-env": "7.15.6",
     "@types/express-serve-static-core": "^4.17.33",
     "body-parser": "^1.20.2",
+    "dotenv": "10.0.0",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-serve-static-core": "^0.1.1",
